syntax = "proto3";

package Communication;

service Responder {
    rpc CallingOut (RequestMsg) returns (RespnseMsg) {}
}

message RequestMsg {
    string pleaseMsg = 1;
}

message RespnseMsg {
    string loudReply = 1;
}
